--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,4 +10,9 @@ body{
     background: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)),url(../img/calling\ banner.jpg);
     background-size: cover;
     color: white;
+}
+.my-card{
+    padding: 20px;
+    background: #FFFFFF;
+    
 } 
