--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{base::layout(~{::section})}">
 <head>
     <meta charset="UTF-8">
     <title>This is Signup page</title>
@@ -9,7 +9,65 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <h1 class="text-center">Resgister Here</h1>
+                <div class="my-card mt-3">
+                  
+                    <div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+
+                        <p class="text-center" th:text="${session.message.content}"></p>
+<!-- 
+                        <th:block th:text="${#session.removeAttribute('message')}"></th:block> -->
+
+                      </div>
+
+                    <div class="container text-center">
+                        <img class="" style="width: 80px;" src="" th:src="@{/img/register.png}">
+                    
+                    </div>
+                    <h1 class="text-center">Resgister Here !!</h1>
+                    <form novalidate action="" th:action="@{/do_register}" method="post" th:object="${user}">
+                        <!-- NAME FIELD -->
+                        <div class="form-group">
+                            <label for="name_field">Your Name</label>
+                            <input name="name" type="text" class="form-control " th:classappend="${#fields.hasErrors('name')? 'is-invalid':''}" id="name_field" aria-describedby="emailHelp" placeholder="Enter here" required th:value="${user.name}"/>
+                            <div class="invalid-feedback" th:each="e:${#fields.errors('name')}" th:text="${e}">
+                                
+                            </div>
+                            
+                        </div>
+
+                        <!-- EMAIL -->
+                        <div class="form-group mt-2">
+                            <label for="email_field">Your Email</label>
+                            <input name="email" type="email" th:classappend="${#fields.hasErrors('email')}?'is-invalid':''" class="form-control" id="email_field" aria-describedby="emailHelp" placeholder="Enter here" required
+                            th:value="${user.email}"/>
+                            <div th:each="e:${#fields.errors('email')}" th:text="${e}" 
+							class="invalid-feedback">
+                            
+                        </div>
+                        <!-- PASSWORD FIELD -->
+                        <div class="form-group mt-2">
+                            <label for="password_field">Your Password</label>
+                            <input name="password" type="password" class="form-control" id="password_field" aria-describedby="emailHelp" placeholder="Enter here" required/>
+                            
+                        </div>
+                        <!--user about field  -->
+                        <div class="form-group mt-3">
+                            <textarea name="about" th:text="${user.about}" placeholder="Enter Sumthing yourself" rows="10" class="form-control"></textarea>
+                        </div>
+                        <!-- This is terms and condition agreement -->
+                        <dev class="form-group form-check ">
+                            <input type="checkbox" name="agreement" class="form-check-input" id="agreement"/>
+                            <label for="agreement">Accept terms and conditions</label>
+                        </dev>
+
+                        <!-- buttons -->
+                        <div class="container text-center mt-2">
+
+                            <button type="submit" class="btn bg-primary text-white">Submit</button>
+                            <button type="reset" class="btn  btn-warning">Reset</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
