--- a/src/main/resources/templates/normal/user_dashbord.html
+++ b/src/main/resources/templates/normal/user_dashbord.html
@@ -1,12 +1,19 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="normal/base::layout(~{::section})">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Dashbord</title>
+    <meta charset="UTF-8">
+    <title>This is home page</title>
 </head>
+
 <body>
-  <h1>Welcom you normal user</h1>
-  <h1>this is user normal dashbord</h1>
+    <section>
+        <h1>this is about page</h1>
+        <h2>this allinformation of about page</h2>
+
+    </section>
+
 </body>
+
 </html>
