--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,11 +5,11 @@
     <title>This is Signup page</title>
 </head>
 <body>
-<section>
+<section class="vh-100 gradient-custom">
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <div class="my-card mt-3">
+                <div class="my-card mt-3 bg-dark text-white">
                   
                     <div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
 
