--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,7 +2,11 @@ body{
     background: #e2e2e2 !important;
 }
 .bg-primary{
-    background: #009688 !important;
+    background: #0c1010 !important;
+}
+
+.bg-bt{
+  background: #0a19ba !important;
 }
 .banner{
     width: 100%;
@@ -16,3 +20,31 @@ body{
     background: #FFFFFF;
     
 } 
+.gradient-custom {
+  /* fallback for old browsers */
+  background: #6a11cb;
+  
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+  
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+  }
+
+
+/* login page */
+
+
+  #login .container #login-row #login-column #login-box {
+    margin-top: 120px;
+    max-width: 600px;
+    height: 340px;
+    border: 1px solid #9C9C9C;
+    background-color: #4a1919;
+  }
+  #login .container #login-row #login-column #login-box #login-form {
+    padding: 20px;
+  }
+  #login .container #login-row #login-column #login-box #login-form #register-link {
+    margin-top: -85px;
+  }
