--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+
 <head>
     <meta charset="UTF-8">
     <title>This is home page</title>
 </head>
-<body>
-<section>
-    <h1>this is about page</h1>
-    <h2>this allinformation of about page</h2>
 
-</section>
+<body>
+    <section class="vh-100 gradient-custom text-white">
+        <h1>this is about page</h1>
+        <h2>this allinformation of about page</h2>
+
+    </section>
 
 </body>
+
 </html>
