add contact update

--- a/src/main/resources/templates/normal/user_dashbord.html
+++ b/src/main/resources/templates/normal/user_dashbord.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="normal/base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{normal/base::layout(~{::section})}">
 
 <head>
     <meta charset="UTF-8">
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <section>
-        <h1>this is about page</h1>
-        <h2>this allinformation of about page</h2>
+    <section class="vh-100 gradient-custom" >
+        <h1 class="text-center" >Home</h1>
+        <h2 class="text-center">this allinformation of about page</h2>
 
     </section>
 
