--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -7,12 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link th:rel="stylesheet" th:href="@{/css/userstyle.css}" />
     <title th:text="${title}">Base Html</title>
 </head>
 <body>
 <!--navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-light bg-primary fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Smart Contact Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,9 +44,64 @@
 </nav>
 <!--end of navbar-->
 
+<div id="wrapper">
+    <div class="overlay"></div>
+     
+         <!-- Sidebar -->
+     <nav class="navbar navbar-inverse fixed-top" id="sidebar-wrapper" role="navigation">
+      <ul class="nav sidebar-nav">
+        <div class="sidebar-header">
+        <div class="sidebar-brand">
+          <a href="#"><b><span style="text-transform:uppercase"  th:text="${user.name}"></span></b></a></div></div>
+        <li><a href="#home" th:href="@{/user/index}">Home</a></li>
+        <li><a href="#team">View Contacts</a></li>
+        <li><a href="#addContact" th:href="@{/user/add-contact}"> Add Contact</a></li>
+        <li><a href="#events">Profile</a></li>
+        
+        
+       <li><a href="#services">Setting</a></li>
+       <li><a href="#contact">Contact</a></li>
+       <li><a href="#followme">Follow me</a></li>
+       </ul>
+   </nav>
+         <!-- /#sidebar-wrapper -->
+         <div class="content">
+   
+    
+            <div th:replace="${content}"></div>
+        </div>
+         <!-- Page Content -->
+         <div id="page-content-wrapper ">
+             <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
+                 <span class="hamb-top"></span>
+           <span class="hamb-middle"></span>
+         <span class="hamb-bottom"></span>
+             </button>
+             <div class="container " >
+                 <div class="row">
+                     <div class="col-lg-8 col-lg-offset-2">
+                       
+                                             
+                     </div>
+                 </div>
+             </div>
+         </div>
+         <!-- /#page-content-wrapper -->
+ 
+     </div>
+     <!-- /#wrapper -->
+ 
+<!-- End sidebar -->
 
 
-<div th:replace="${content}"></div>
+<!-- content area -->
+
+
+  
+
+
+
+
 
 <!-- Optional JavaScript; choose one of the two! -->
 
@@ -57,6 +113,12 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script th:src="@{/js/script.js}"></script>
+
+<!-- Include jQuery library -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<!-- Include your script.js file -->
+<script th:src="@{/js/script.js}"></script>
+
 
 </body>
 </html>
