--- a/src/main/resources/templates/normal/user_dashbord.html
+++ b/src/main/resources/templates/normal/user_dashbord.html
@@ -9,7 +9,7 @@
 
 <body>
     <section class="vh-100 gradient-custom" >
-        <h1 class="text-center" >Home</h1>
+        <h1 class="text-center color-white mt-4" >Home</h1>
         <h2 class="text-center">this allinformation of about page</h2>
 
     </section>
