--- a/src/main/resources/templates/normal/add_contact_form.html
+++ b/src/main/resources/templates/normal/add_contact_form.html
@@ -37,7 +37,7 @@
                         <!-- Phone Number -->
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1"><span class="fa fa-phone" ></span></span>
-                            <input type="number" class="form-control" id="phone" name="phone" placeholder="Enter Phone Number" aria-label="phone" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter Phone Number" aria-label="phone" aria-describedby="basic-addon1">
                           </div>
 
                         <!--Email  -->
@@ -64,6 +64,8 @@
                         <div class="container mt-3 text-center">
                             <button class="btn btn-outline-primary">Save Contact</button>
                         </div>
+
+                        
 
                     </form>
                     </div>
